--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".wifi.presentation.detailwifi.DetailWifiActivity"></activity>
+        <activity android:name=".wifi.presentation.detailwifi.DetailWifiActivity" />
+        <activity android:name=".wifi.presentation.allwifi.AllWifiActivity" />
+        <activity android:name=".wifi.presentation.detaildevice.DetailDeviceActivity"></activity>
     </application>
 
 </manifest>
